Update psutil requirement to 6.0.0
Update setuptools requirement to 74.0.0
Update tmdbapis requirement to 1.2.21

# Removed Features

# New Features
Introducing the [Kometa Blog](https://blog.kometa.wiki) - a new home for all kometa-related news stories, ranging from showcasing our community creations to providing you with important updates.
Added [`letterboxd_user_lists`](https://kometa.wiki/en/latest/files/dynamic_types/#letterboxd-user-lists) Dynamic Collection Type

# Updates
F1 session naming improvements
Added new studios : Disney Television Animation, DisneyToon Studios, Dynamic Planning, Film4 Productions, Golden Harvest, Hungry Man, Screen Gems, Shaw Brothers, Studio Live, The Stone Quarry

# Defaults
Fixed #2150; change xmen list to a new one
Added `A Quiet Place: Day One` to the `A Quiet Place` collection in the `franchise` Defaults file
Add `minimum_items_<<key>>` to universe Default file
Added workaround to `Streaming` for TMDb issue with TMDb Discover

# Bug Fixes
Fixed multiple anime `int()` Errors
Fixed #2100 `verify_ssl` wasn't working when downloading images
Fixed an issue with `delete_collections` where items were being deleted if they only matched one criteria vs all criteria
Fixed `imdb_watchlist`
Fixes #2135 AniDB Builder type conversion error
Fixed #2169 Add handling for blank secrets
Fixed #2176 `clean_bundles`, `optimize`, and `empty_trash` not working as global attributes
Fixed #2186 `total_runtime` will now trigger an overlay update
Fixed #2195 an image on the docs was a dead link
Fixes sort order of resolution collections
Fixes #2228 ".any" not accepted for a variety of imdb_search parameters
Fixes `streaming` defaults adding and removing items randomly
Fixes missing TMDb Discover parameters
Fixes `imdb_chart` error when using `trending_india`
Adds error information to help with #2201
Added warning to TMDb Discover builder regarding ongoing bug with using `popularity.desc` as sort order
Various other Minor Fixes